//TODO: Find out if the client-side can be implemented here or in other repo

//Generated classes can be found under build/generated/source !

syntax = "proto3";

option java_package = "review.service";
option java_outer_classname = "ReviewServiceProto";

service ReviewService {

  rpc putReviews(Review) returns (Empty) {} //Does this work??

  rpc getReviews(ProductID) returns (stream Review) {}

}

message ProductID {

  string product_id = 1; //required

}

message Review {

  string id = 1; //required

  string name = 2; //required

  int32 star = 3; //required

  optional string text = 4;

  string product_id = 5; //required

  string date = 6;

}

message Empty {}